# competition-framework

./: LICENSE  Pipfile  README.md  pyproject.toml
examples/minimal/: driver.py  events.py
examples/simple-single-agent/: driver.py  events.py
proto/: agent.proto  evaluation.proto  nodeapi.proto  scheduling.proto  scoreboard.proto
scripts/: compile_protos.py
src/doxa_competition/: competition.py  context.py  evaluation.py  event.py  event_handlers.py  event_router.py  events.py  execution.py  pool.py  runner.py  umpire.py  utils.py  worker.py
src/doxa_competition/evaluation/: __init__.py  context.py  driver.py  errors.py  node.py  server.py
src/doxa_competition/event/: __init__.py  handler.py  handlers.py  router.py
src/doxa_competition/proto/nodeapi/: __init__.py
src/doxa_competition/proto/umpire/: scheduling.py
src/doxa_competition/proto/umpire/agent/: __init__.py
src/doxa_competition/proto/umpire/evaluation/: __init__.py
src/doxa_competition/proto/umpire/scheduling/: __init__.py
src/doxa_competition/proto/umpire/scoreboard/: __init__.py
